--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,10 @@ h1, h2, h3, .nav-link {
 
 /*                    HEADER                  */ 
 
+header {
+    height: 60px;
+}
+
 .navbar-nav {
     align-items: center;
 }
@@ -58,28 +62,34 @@ h1, h2, h3, .nav-link {
 /*                   BANNER                     */ 
 .banner-con {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    height: 140px;
+    justify-content: center;
+    height: 270px;
 }
 
 .banner-con .banner-text {
-    width: 40%;
-    padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
 }
 
 .banner-con .banner-text h1{
-    text-align: left;
+    text-align: center;
     font-size: 14px;
+
 }
 
 .banner-con .banner-img {
-    width: 60%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .banner-con .banner-img img{
-    width: 200px;
+    width: 230px;
+    margin: auto;
 }
 
 
