--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,8 @@ header {
 
 #navbarNavDropdown {
     justify-content: flex-end;
+    background-color: white;
+    box-shadow: 0px 3px 5px 0px rgba(163,163,163,1);
 }
 
 .nav-link.dropdown-toggle {
@@ -56,7 +58,10 @@ header {
     border-style: none !important;
 }
 
-
+.navbar-toggler:focus {
+    box-shadow: 0 0 0 0.1rem;
+    color: rgb(196 228 232);
+}
 
 
 /*                   BANNER                     */ 
@@ -78,7 +83,7 @@ header {
 .banner-con .banner-text h1{
     text-align: center;
     font-size: 16px;
-
+    
 }
 
 .banner-con .banner-img {
@@ -88,7 +93,7 @@ header {
 }
 
 .banner-con .banner-img img{
-    width: 230px;
+    width: 250px;
     margin: auto;
 }
 
@@ -101,6 +106,7 @@ header {
 
 #cards1 {
     border-radius: 12px 12px 0 0 ;
+    
 }
 
 #cards2 {
@@ -122,6 +128,7 @@ header {
     border-radius: 12px;
 }
 
+
 .cards-con .card .card-link {
     display: flex;
     flex-direction: column;
@@ -130,12 +137,12 @@ header {
 }
 
 .cards-con .card .card-img-top{
-    width: 60%;
+    width: 65%;
     margin: auto;
 }
 
 .cards-con .card #cv, .cards-con .card #material{
-    width: 30%;
+    width: 35%;
     margin: auto;
 }
 
@@ -161,15 +168,15 @@ header {
 }
 
 .footer-con .footer-item {
-    height: 40px;
+    height: 60px;
     margin: auto;
 }
 
 .footer-item:nth-child(2){
-    height: 30px;
+    height: 50px;
 }
 
 .footer .copy {
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 500;
 }
